# machine-usable-words

./: .gitignore  .travis.yml  README.md  appveyor.yml  gh_rsa.enc  machine-usable-words-generator.1  machine-usable-words-generator.1.html  machine-usable-words.sublime-project
generator/: Cargo.toml  machine-usable-words-generator.md
generator/src/: main.rs  options.rs
generator/src/util/: mod.rs  polywrite.rs
raw/: adjectives  adverbs  nouns  words
rust/: adjectives.rs  adverbs.rs  nouns.rs  words.rs
